# atmaCup17

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
exp/000/: eda.ipynb
exp/000/config/: config.yaml
exp/001/: run.ipynb
exp/001/config/: config.yaml
exp/001/config/model/: cb.yaml  lgb.yaml
exp/001/src/: groupkfold.py
exp/002/: run.ipynb
exp/002/config/model/: cb.yaml  lgb.yaml
exp/003/: run.ipynb
exp/003/config/model/: bert.yaml
exp/003/src/: seed.py
exp/004/: run.ipynb
exp/004/config/model/: bert.yaml  lgb.yaml
exp/005/: run.ipynb
exp/005/config/model/: bert.yaml
exp/006/: run.ipynb
exp/006/config/model/: bert.yaml  lgb.yaml
exp/007/: run.ipynb
exp/007/config/model/: lgb.yaml
exp/007/src/: README.md
exp/008/: run.ipynb
exp/008/config/: config.yaml
exp/008/config/model/: bert.yaml
exp/008/src/: seed.py
exp/009/: run.ipynb
exp/009/config/: config.yaml
exp/009/config/model/: bert.yaml  lgb.yaml
exp/010/: run.ipynb
exp/010/config/model/: bert.yaml
exp/011/: run.ipynb
exp/011/config/model/: bert.yaml
exp/012/: run.ipynb
exp/012/config/model/: bert.yaml
exp/013/: run.ipynb
exp/013/config/model/: bert.yaml
exp/013/src/: seed.py
exp/014/: run.ipynb
exp/014/config/model/: bert.yaml
exp/015/: run.ipynb
exp/015/config/: config.yaml
exp/016/: run.ipynb
exp/016/config/: config.yaml
exp/016/config/model/: bert.yaml  gemma.yaml
exp/017/: run.ipynb
exp/017/config/model/: gemma.yaml
exp/017/src/: seed.py
exp/020/: run.ipynb
exp/022/: run.ipynb
results/001/20240825_234011/: log.txt
results/001/20240826_115354/: log.txt
results/001/20240828_233749/: log.txt
results/001/20240829_185503/: log.txt
results/002/20240828_224243/: log.txt
results/002/20240829_001656/: log.txt
results/002/20240830_000502/: log.txt
results/006/20240830_121252/: log.txt
results/007/20240830_143931/: log.txt
results/009/20240831_013303/: log.txt
results/010/20240831_042801/: log.txt
results/014/20240831_063402/: log.txt
