[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "jupyter>=1.0.0",
    "polars>=1.5.0",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "hydra-core>=1.3.2",
    "scikit-learn>=1.5.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.2",
    "matplotlib-venn>=1.1.1",
    "japanize-matplotlib>=1.1.3",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
    "catboost>=1.2.5",
    "gensim>=4.3.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]

[tool.ruff.lint.isort]

[tool.mypy]
ignore_missing_imports = true
