[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.1.1",
    "jupyter>=1.0.0",
    "polars>=1.5.0",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "hydra-core>=1.3.2",
    "scikit-learn>=1.5.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.2",
    "matplotlib-venn>=1.1.1",
    "japanize-matplotlib>=1.1.3",
    "seaborn>=0.13.2",
    "tqdm>=4.64.1",
    "catboost>=1.2.5",
    "torch",
    "transformers>=4.44.2",
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "F401",  # Unused import
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant
    "PLW2901",  # `for` loop variable overwritten by assignment target
    "N803",  # Argument name should be lowercase
    "N806",  # Variable name should be lowercase
    "N812",  # Lowercase imported as non-lowercase
]
